<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPX Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_delete">Really delete this file?</string>
    <string name="confirm_no">Not then not..</string>
    <string name="gps">GPS</string>
    <string name="gps_status">GPS</string>
    <string name="duration">Duration:</string>
    <string name="zduration" translatable="false">00:00:00</string>
    <string name="distance">Distance:</string>
    <string name="zdistance" translatable="false">0.00 km</string>
    <string name="zspeed" translatable="false">0.00 km/h</string>
    <string name="b_stop">STOP</string>
    <string name="b_start">START</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_interval_decrease" translatable="false"><![CDATA[<<]]></string>
    <string name="settings_interval_value">DEFAULT</string>
    <string name="settings_interval_increase" translatable="false"><![CDATA[>>]]></string>
    <string name="settings_showinfotonotif">Show track data in notification bar</string>
    <string name="t_interval_title">Location update interval:</string>
    <string name="t_speed_title">Minimum speed for track recording:</string>
    <string name="avspeed">Avg. speed:</string>
    <string name="title_activity_record_list">Choose your GPX file:</string>
    <string name="action_RecordList">GPX Records</string>
    <string name="title_activity_gpxdetails">GPX File</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="gps_connected">GPS is connected</string>
    <string name="gps_searching">Searching for signal…</string>
    <string name="gps_isdisabled">GPS is disabled, please turn on.</string>
    <string name="toast_trackstarted">Tracking has started</string>
    <string name="toast_gpxempty">The GPS file is empty!</string>
    <string name="toast_wasdeleted"> was deleted</string>
    <string name="toast_settingssaved">Your settings were saved</string>
    <string name="toast_minimumupdateinterval">Minimum update interval is 1 second</string>
    <string name="toast_minimumspeed">Minimum speed is 0 then autopause is be disabled</string>
    <string name="toast_servicestarted">Tracking will start ASAP GPS is connected</string>
    <string name="toast_trackstopped">Tracking service is stopped, file saved.</string>
    <string name="service_running">Tracking…</string>
    <string name="service_waitinggps">Waiting for GPS…</string>
    <string name="t_maxspeed">Max. speed:</string>
    <string name="gpx_no_location" translatable="false">\?\?\?</string>
    <string name="action_resumeTracking">Resume tracking</string>
    <string name="intent_resumeFileOK">Resuming</string>
    <string name="intent_resumeFileFail">Stop the tracker first!</string>
    <string name="dialog_confirmStop">Really stop tracking?</string>
    <string name="t_efficiency">Trip eff.</string>
    <string name="t_downhill">Downhill:</string>
    <string name="t_uphill">Uphill:</string>
    <string name="t_maxheight">Max. height:</string>
    <string name="t_minheight">Min. height:</string>
    <string name="t_deltaheight">Δheight:</string>
    <string name="credits">These great colored icons are provided by www.icons8.com</string>
    <string name="fragment_navigation_b_close">CLOSE THE MAP</string>
    <string name="title_activity_hr_monitor_configuration">HR Monitor Config</string>
    <string name="zbpm">0 bpm</string>
    <string name="t_maxbpm">Max. HR:</string>
    <string name="t_avbpm">Avg. HR:</string>
    <string name="t_bpm"> bpm</string>
    <string name="t_current_hrm">Current device:</string>
    <string name="action_scan_hrm">Scan</string>
    <string name="b_confirm_hrm">Confirm</string>
    <string name="b_configure_hrm">Configure…</string>
    <string name="t_settings_hrm">Heart rate monitor configuration:</string>
    <string name="chk_use_hrm">Use HR monitor</string>
    <string name="service_enable_bt">Bluetooth is disabled, starting without heart rate…</string>
    <string name="action_follow_route_descr">Follow route</string>
    <string name="chk_duration">Time</string>
    <string name="chk_distance">Distance</string>
    <string name="chk_speed">Speed</string>
    <string name="chk_avspeed">Average speed</string>
    <string name="chk_pace">Pace</string>
    <string name="chk_avpace">Average pace</string>
    <string name="zpace" translatable="false">00:00 min./km</string>
    <string name="t_avpace">Avg. pace:</string>
    <string name="t_maxpace">Max. pace.:</string>
    <string name="chk_avheartrate">Average heartrate</string>
    <string name="hud_display_elements">HUD elements to display:</string>

</resources>
